--- a/app/src/main/res/layout/activity_edit_nav.xml
+++ b/app/src/main/res/layout/activity_edit_nav.xml
@@ -16,7 +16,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="设置标签"
+            android:text="@string/set_tag"
             android:textColor="@color/black6"
             android:textSize="@dimen/sp15" />
     </RelativeLayout>
@@ -35,7 +35,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="绑定设备"
+            android:text="@string/bind_device"
             android:textColor="@color/black6"
             android:textSize="@dimen/sp15" />
     </RelativeLayout>
@@ -119,7 +119,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="提醒列表"
+            android:text="@string/remind_list"
             android:textColor="@color/black6"
             android:textSize="@dimen/sp15" />
     </RelativeLayout>
@@ -140,7 +140,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="电子围栏列表"
+            android:text="@string/electronic_fence_list"
             android:textColor="@color/black6"
             android:textSize="@dimen/sp15" />
     </RelativeLayout>
@@ -178,7 +178,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="联系人列表"
+            android:text="@string/contact_list"
             android:textColor="@color/black6"
             android:textSize="@dimen/sp15" />
     </RelativeLayout>
