--- a/app/src/main/res/layout/activity_family_add.xml
+++ b/app/src/main/res/layout/activity_family_add.xml
@@ -28,7 +28,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="头像"
+                    android:text="@string/portrait"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -82,7 +82,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -112,7 +112,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="姓名"
+                    android:text="@string/name"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -126,7 +126,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -156,7 +156,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="性别"
+                    android:text="@string/sex"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -170,7 +170,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -200,7 +200,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="关系"
+                    android:text="@string/relation"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -215,7 +215,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dp_18"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -245,7 +245,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="生日"
+                    android:text="@string/birthday"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -259,7 +259,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -289,7 +289,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="体重(kg)"
+                    android:text="@string/weight_kg"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -303,7 +303,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -333,7 +333,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="身高(cm)"
+                    android:text="@string/height_cm"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -347,7 +347,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -377,7 +377,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="手机号码"
+                    android:text="@string/phone_number"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -391,7 +391,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -411,7 +411,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dp_16"
                 android:background="@drawable/shape_button_bg"
-                android:text="保存"
+                android:text="@string/save"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp15" />
 
