--- a/app/src/main/res/layout/activity_info_detail.xml
+++ b/app/src/main/res/layout/activity_info_detail.xml
@@ -40,7 +40,7 @@
                     android:id="@+id/infoAuthor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dp_18"
+                    android:layout_marginStart="@dimen/dp_18"
                     android:textSize="@dimen/sp15" />
             </LinearLayout>
 
