--- a/app/src/main/res/layout/activity_member_detail.xml
+++ b/app/src/main/res/layout/activity_member_detail.xml
@@ -28,7 +28,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="头像"
+                    android:text="@string/portrait"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -80,7 +80,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -110,7 +110,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="姓名"
+                    android:text="@string/name"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -122,7 +122,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -152,7 +152,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="性别"
+                    android:text="@string/sex"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -164,7 +164,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -194,7 +194,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="关系"
+                    android:text="@string/relation"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -205,7 +205,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -235,7 +235,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="生日"
+                    android:text="@string/birthday"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -247,7 +247,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -277,7 +277,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="体重(kg)"
+                    android:text="@string/weight_kg"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -289,7 +289,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -319,7 +319,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="身高(cm)"
+                    android:text="@string/height_cm"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -331,7 +331,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -361,7 +361,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="手机号码"
+                    android:text="@string/phone_number"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -372,7 +372,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -392,7 +392,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dp_16"
                 android:background="@drawable/shape_button_bg"
-                android:text="保存"
+                android:text="@string/save"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp15" />
 
@@ -405,7 +405,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="@dimen/dp_16"
                 android:background="@drawable/shape_unbind_device_bg"
-                android:text="删除"
+                android:text="@string/delete"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp15" />
         </LinearLayout>
