--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -81,7 +81,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dp_12"
                     android:layout_weight="1"
-                    android:text="修改密码"
+                    android:text="@string/update_password"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp_16" />
 
@@ -118,7 +118,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dp_12"
                     android:layout_weight="1"
-                    android:text="修改资料"
+                    android:text="@string/modified_data"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp_16" />
 
@@ -198,7 +198,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dp_8"
                     android:layout_weight="1"
-                    android:text="位置导航"
+                    android:text="@string/location_navigation"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp_16" />
 
@@ -236,7 +236,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dp_12"
                     android:layout_weight="1"
-                    android:text="意见反馈"
+                    android:text="@string/feed_back"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp_16" />
 
@@ -252,7 +252,42 @@
                 android:layout_marginLeft="@dimen/dp_8"
                 android:layout_marginRight="@dimen/dp_8"
                 android:background="#f6f6f6" />
+            <LinearLayout
+                android:id="@+id/layoutHelp"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/selector_item_click_bg"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/dp_8"
+                android:paddingRight="@dimen/dp_8">
 
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/icon_feed_back" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp_12"
+                    android:layout_weight="1"
+                    android:text="@string/help_center"
+                    android:textColor="@color/black6"
+                    android:textSize="@dimen/sp_16" />
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="16dp"
+                    android:src="@mipmap/icon_right" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="@dimen/dp_8"
+                android:layout_marginRight="@dimen/dp_8"
+                android:background="#f6f6f6" />
             <LinearLayout
                 android:id="@+id/layoutAbout"
                 android:layout_width="match_parent"
@@ -273,7 +308,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dp_12"
                     android:layout_weight="1"
-                    android:text="关于我们"
+                    android:text="@string/about_us"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp_16" />
 
@@ -311,7 +346,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dp_8"
                     android:layout_weight="1"
-                    android:text="退出登录"
+                    android:text="@string/log_out"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp_16" />
 
@@ -328,7 +363,7 @@
                 android:layout_height="44dp"
                 android:layout_margin="24dp"
                 android:background="@drawable/shape_button_bg"
-                android:text="退出登录"
+                android:text="@string/log_out"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp_16"
                 android:visibility="gone" />
