--- a/app/src/main/res/layout/item_label_layout.xml
+++ b/app/src/main/res/layout/item_label_layout.xml
@@ -15,6 +15,6 @@
         android:background="@drawable/shape_tag_unselect"
         android:gravity="center"
         android:padding="@dimen/dp_8"
-        android:text="标签"
+        android:text="--"
         android:textColor="@color/black6" />
 </LinearLayout>
