--- a/app/src/main/res/layout/activity_agreement.xml
+++ b/app/src/main/res/layout/activity_agreement.xml
@@ -30,7 +30,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/black9"
-                android:text="不同意该协议"
+                android:text="@string/disagreement"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp17"
                 android:textStyle="bold" />
@@ -41,7 +41,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/appThemeColor"
-                android:text="同意该协议"
+                android:text="@string/agreement"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp16"
                 android:textStyle="bold" />
