--- a/app/src/main/res/layout/activity_contact_add.xml
+++ b/app/src/main/res/layout/activity_contact_add.xml
@@ -28,7 +28,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="头像"
+                    android:text="@string/portrait"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -67,7 +67,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="昵称"
+                    android:text="@string/nickname"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -79,7 +79,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -110,7 +110,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="性别"
+                    android:text="@string/sex"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -122,7 +122,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -153,7 +153,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="手机号码"
+                    android:text="@string/phone_number"
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
@@ -164,7 +164,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:hint="未填写"
+                    android:hint="@string/not_filled"
                     android:maxLines="1"
                     android:textColor="@color/black6"
                     android:textColorHint="@color/black9"
@@ -184,7 +184,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dp_16"
                 android:background="@drawable/shape_button_bg"
-                android:text="保存"
+                android:text="@string/save"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp15" />
 
