--- a/app/src/main/res/layout/activity_input_msg.xml
+++ b/app/src/main/res/layout/activity_input_msg.xml
@@ -13,7 +13,7 @@
         android:layout_height="48dp"
         android:layout_margin="@dimen/dp_8"
         android:background="@drawable/shape_edit_text_bg"
-        android:hint="这里输入内容"
+        android:hint="@string/input_content"
         android:padding="@dimen/dp_8"
         android:textColor="@color/black6"
         android:textColorHint="@color/black9"
