--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -36,19 +37,28 @@
                 android:src="@mipmap/icon_phone" />
 
             <EditText
+                android:layout_weight="1"
                 android:id="@+id/edAccount"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="38dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:background="@color/white"
-                android:hint="请输入手机号"
+                android:hint="@string/input_phone"
                 android:inputType="number"
                 android:maxLength="11"
                 android:maxLines="1"
                 android:textColor="#666"
                 android:textColorHint="#999"
                 android:textSize="15sp" />
+            <TextView
+                android:id="@+id/tvArea"
+                android:gravity="center"
+                android:paddingEnd="8dp"
+                android:paddingStart="8dp"
+                android:text="+86"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"/>
         </LinearLayout>
 
         <LinearLayout
@@ -76,7 +86,7 @@
                 android:layout_marginRight="8dp"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:hint="请输入短信验证码"
+                android:hint="@string/input_code"
                 android:inputType="number"
                 android:maxLines="1"
                 android:textColor="#666"
@@ -88,7 +98,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="获取验证码"
+                android:text="@string/verification_code"
                 android:textColor="@color/blue"
                 android:textSize="15sp" />
         </LinearLayout>
@@ -117,7 +127,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:background="@color/white"
-                android:hint="请输入密码"
+                android:hint="@string/input_password"
                 android:inputType="textPassword"
                 android:singleLine="true"
                 android:textColor="#666"
@@ -133,9 +143,10 @@
             android:layout_marginTop="36dp"
             android:layout_marginRight="36dp"
             android:background="@drawable/shape_button_bg"
-            android:text="注册"
+            android:text="@string/register"
             android:textColor="@color/white"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            tools:ignore="HardcodedText" />
 
         <LinearLayout
             android:visibility="gone"
@@ -150,12 +161,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="注：使用本软件表示接受该" />
+                android:text="@string/accept_user_agreement" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="用户协议"
+                android:text="@string/user_agreement"
                 android:textColor="@color/appThemeColor" />
 
         </LinearLayout>
