--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_12"
             android:layout_weight="1"
-            android:text="修改密码"
+            android:text="@string/update_phone_number"
             android:textColor="@color/black6"
             android:textSize="@dimen/sp_16" />
 
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_12"
             android:layout_weight="1"
-            android:text="修改资料"
+            android:text="@string/modified_data"
             android:textColor="@color/black6"
             android:textSize="@dimen/sp_16" />
 
@@ -125,7 +125,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_12"
             android:layout_weight="1"
-            android:text="传感器"
+            android:text="@string/sensor"
             android:textColor="@color/black6"
             android:textSize="@dimen/sp_16" />
 
@@ -162,7 +162,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_12"
             android:layout_weight="1"
-            android:text="意见反馈"
+            android:text="@string/feed_back"
             android:textColor="@color/black6"
             android:textSize="@dimen/sp_16" />
 
@@ -200,7 +200,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_12"
             android:layout_weight="1"
-            android:text="关于我们"
+            android:text="@string/about_us"
             android:textColor="@color/black6"
             android:textSize="@dimen/sp_16" />
 
@@ -220,7 +220,7 @@
         android:layout_marginRight="@dimen/dp_24"
         android:layout_marginTop="@dimen/dp_8"
         android:background="@drawable/shape_button_bg"
-        android:text="退出登录"
+        android:text="@string/log_out"
         android:textColor="@color/white"
         android:textSize="@dimen/sp_16" />
 </LinearLayout>
