--- a/app/src/main/res/layout/activity_update_phone.xml
+++ b/app/src/main/res/layout/activity_update_phone.xml
@@ -30,7 +30,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:background="@color/white"
-            android:hint="原手机号码"
+            android:hint="@string/input_old_phone"
             android:inputType="number"
             android:maxLength="11"
             android:maxLines="1"
@@ -63,7 +63,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:background="@color/white"
-            android:hint="新手机号码"
+            android:hint="@string/input_new_phone"
             android:inputType="number"
             android:maxLength="11"
             android:maxLines="1"
@@ -97,7 +97,7 @@
             android:layout_marginRight="8dp"
             android:layout_weight="1"
             android:background="@color/white"
-            android:hint="短信验证码"
+            android:hint="@string/input_code"
             android:inputType="number"
             android:maxLines="1"
             android:textColor="#666"
@@ -109,7 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="获取验证码"
+            android:text="@string/verification_code"
             android:textColor="@color/blue"
             android:textSize="15sp" />
     </LinearLayout>
@@ -138,7 +138,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:background="@color/white"
-            android:hint="输入登录密码"
+            android:hint="@string/input_login_password"
             android:inputType="textPassword"
             android:maxLines="1"
             android:textColor="#666"
@@ -149,11 +149,11 @@
         android:id="@+id/btnSubmit"
         android:layout_width="match_parent"
         android:layout_height="42dp"
-        android:layout_marginLeft="@dimen/dp_18"
+        android:layout_marginStart="@dimen/dp_18"
         android:layout_marginTop="16dp"
-        android:layout_marginRight="18dp"
+        android:layout_marginEnd="18dp"
         android:background="@drawable/shape_button_bg"
-        android:text="提交"
+        android:text="@string/commit"
         android:textColor="@color/white"
         android:textSize="15sp" />
 </LinearLayout>
