--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="资讯列表"
+            android:text="@string/information_list"
             android:textColor="@color/white"
             android:textSize="@dimen/sp15" />
 
