--- a/app/src/main/res/layout/layout_empty_view.xml
+++ b/app/src/main/res/layout/layout_empty_view.xml
@@ -15,6 +15,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_10"
-        android:text="暂无数据" />
+        android:text="@string/no_data" />
 
 </LinearLayout>
