--- a/app/src/main/res/layout/activity_agreement.xml
+++ b/app/src/main/res/layout/activity_agreement.xml
@@ -11,18 +11,28 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <WebView
-            android:id="@+id/webView"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1">
+
+            <WebView
+                android:id="@+id/webView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+            <ProgressBar
+                android:visibility="gone"
+                android:id="@+id/progress"
+                style="@android:style/Widget.ProgressBar.Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="2dp" />
+        </FrameLayout>
 
         <LinearLayout
             android:id="@+id/layoutBottom"
             android:layout_width="match_parent"
             android:layout_height="42dp"
-            android:layout_alignParentBottom="true"
-            android:visibility="visible">
+            android:visibility="invisible">
 
             <Button
                 android:id="@+id/btnDisAgree"
